# stm32f446-embassy

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
